<resources>
    <string name="app_name">FreshNews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_business">business</string>
    <string name="menu_health">health</string>
    <string name="menu_entertainment">enttertainment</string>
    <string name="menu_general">general</string>
    <string name="menu_science">science</string>
    <string name="menu_Technology">Technology</string>
    <string name="menu_sports">sports</string>

</resources>